# ese-jenkins

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  azure-pipelines.yml  build.bat  ft800emu.sln
QScintilla/: CMakeLists.txt
app/: CMakeLists.txt  adpcm.h  app.cpp  app.vcproj  crate.h  main.cpp  pcm.h  ulaw.h
bt815emu/: CMakeLists.txt  bt815emu_espim.cpp  bt815emu_espim.h
bt817emu/: CMakeLists.txt  bt817emu_espim.cpp  bt817emu_espim.h  bt817emu_hsf.cpp  bt817emu_hsf.h
bt880emu/: CMakeLists.txt
bt8xxemu/: CMakeLists.txt  bt8xxemu.cpp  bt8xxemu.h  bt8xxemu_diag.h  bt8xxemu_flash.h  bt8xxemu_inttypes.h  bt8xxemu_pp.h  bt8xxemu_test.c  bt8xxemu_version.h  resource.h  version.rc
bt8xxemu_static/: CMakeLists.txt
dump1/: CMakeLists.txt  dump1.vcproj  main.cpp  result.txt  run.bat  runtests.py
editor/: CMakeLists.txt  asset_converter.cpp  asset_converter.h  aud_cvt.py  bitmap_setup.cpp  bitmap_setup.h  code_editor.cpp  code_editor.h  command_log.cpp  content_manager.cpp  content_manager.h  device_display_settings_dialog.cpp  device_manager.cpp  device_manager.h  dl_editor.cpp  dl_editor.h  dl_highlighter.cpp  dl_highlighter.h  dl_parser.cpp  dl_parser.h  emulator_viewport.cpp  emulator_viewport.h  export_eve_arduino.py  export_ftdi_eve_hal.py  export_gd2.py  icons.qrc  img_cvt.py  inspector.cpp  inspector.h  interactive_properties.cpp  interactive_properties.h  interactive_viewport.cpp  interactive_viewport.h  interactive_widgets.cpp  interactive_widgets.h  main.cpp  main_window.cpp  main_window.h  pngp2pa.py  properties_editor.cpp  (+6 more)
eve_hal/: CMakeLists.txt  EVE_Cmd.c  EVE_Cmd.h  EVE_CoCmd.c  EVE_CoCmd.h  EVE_CoCmd_Widgets.c  EVE_CoDl.c  EVE_CoDl.h  EVE_Config.h  EVE_GpuDefs.h  EVE_GpuDefs_BT81X.c  EVE_GpuDefs_BT88X.c  EVE_GpuDefs_FT80X.c  EVE_GpuDefs_FT81X.c  EVE_GpuTypes.h  EVE_Hal.c  EVE_Hal.h  EVE_HalDefs.h  EVE_HalImpl.h  EVE_HalImpl_BT8XXEMU.c  EVE_HalImpl_BT8XXEMUC.c  EVE_HalImpl_FT4222.c  EVE_HalImpl_FT9XX.c  EVE_HalImpl_MPSSE.c  EVE_HalImpl_MULTI.c  EVE_HalImpl_WIN32.c  EVE_ILI9488.h  EVE_ILI9488_FT9XX.c  EVE_ILI9488_RP2040.c  EVE_LoadFile.h  EVE_LoadFile_FATFS.c  EVE_LoadFile_STDIO.c  EVE_MediaFifo.c  EVE_MediaFifo.h  EVE_Platform.h  EVE_Platform_WIN32.h  EVE_Util.c  EVE_Util.h  pdac.h
ft800editor/: CMakeLists.txt  asset_converter.cpp  asset_converter.h  bitmap_setup.cpp  code_editor.h  command_log.cpp  command_log.h  constant_common.h  constant_mapping.cpp  constant_mapping.h  constant_mapping_vc1.cpp  constant_mapping_vc2.cpp  constant_mapping_vc2.h  content_manager.cpp  content_manager.h  device_manager.cpp  device_manager.h  dl_editor.cpp  dl_editor.h  dl_highlighter.cpp  dl_highlighter.h  dl_parser.cpp  dl_parser.h  dl_parser_impl.h  dl_parser_vc2.cpp  emulator_navigator.cpp  emulator_navigator.h  emulator_viewport.cpp  emulator_viewport.h  export_gd2.py  icon.rc  icons.qrc  img_cvt.py  inspector.cpp  inspector.h  interactive_properties.cpp  interactive_properties.h  interactive_viewport.cpp  interactive_viewport.h  interactive_widgets.cpp  (+15 more)
ft800emu/: CMakeLists.txt  README.md  concurrent_bucket_map.h  ft800emu.vcproj  ft800emu_audio_driver.h  ft800emu_audio_driver_sdl.cpp  ft800emu_audio_driver_wasapi.cpp  ft800emu_audio_processor.cpp  ft800emu_audio_processor.h  ft800emu_audio_render.cpp  ft800emu_audio_render.h  ft800emu_bus_slave.cpp  ft800emu_bus_slave.h  ft800emu_coprocessor.cpp  ft800emu_coprocessor.h  ft800emu_defs.h  ft800emu_emulator.cpp  ft800emu_emulator.h  ft800emu_emulator_master.cpp  ft800emu_ft800_spi.cpp  ft800emu_ft800_spi.h  ft800emu_graphics_driver.h  ft800emu_graphics_driver_gdi.cpp  ft800emu_graphics_driver_sdl.cpp  ft800emu_graphics_driver_sdl2_gl.cpp  ft800emu_graphics_processor.cpp  ft800emu_graphics_processor.h  ft800emu_inttypes.h  ft800emu_keyboard.h  ft800emu_keyboard_directinput.cpp  ft800emu_keyboard_keys.h  ft800emu_keyboard_sdl.cpp  ft800emu_memory.cpp  ft800emu_memory.h  ft800emu_minmax.h  ft800emu_spi.cpp  ft800emu_spi.h  ft800emu_spi_i2c.cpp  ft800emu_spi_i2c.h  ft800emu_system.cpp  (+11 more)
ft810editor/: CMakeLists.txt
ft810emu/: CMakeLists.txt  ft810emu_coprocessor.cpp  ft810emu_coprocessor.h
ft8xxemu/: CMakeLists.txt  bt8xxemu_version.h  ft8xxemu.cpp  ft8xxemu.def  ft8xxemu.h  ft8xxemu_audio_driver_sdl.cpp  ft8xxemu_diag.h  ft8xxemu_graphics_driver_gdi.cpp  ft8xxemu_graphics_driver_sdl.cpp  ft8xxemu_graphics_driver_sdl2_gl.cpp  ft8xxemu_inttypes.h  ft8xxemu_keyboard.h  ft8xxemu_keyboard_keys.h  ft8xxemu_legacy.h  ft8xxemu_legacy_diag.h  ft8xxemu_system.h  ft8xxemu_system_linux.cpp  ft8xxemu_system_linux.h  ft8xxemu_system_windows.cpp  ft8xxemu_test.c  ft8xxemu_version.h  version.rc
ft8xxemu_platform/: CMakeLists.txt  eventloop.h  ft8xxemu_audio_driver.h  ft8xxemu_audio_driver_sdl.cpp  ft8xxemu_audio_driver_wasapi.cpp  ft8xxemu_audio_output.h  ft8xxemu_audio_output_todo_sdl.cpp  ft8xxemu_audio_output_wasapi.cpp  ft8xxemu_audio_system_todo_sdl.cpp  ft8xxemu_graphics_driver.h  ft8xxemu_graphics_driver_gdi.cpp  ft8xxemu_graphics_driver_sdl.cpp  ft8xxemu_graphics_driver_sdl2_gl.cpp  ft8xxemu_keyboard_input.h  ft8xxemu_keyboard_input_directinput.cpp  ft8xxemu_keyboard_input_sdl.cpp  ft8xxemu_keyboard_input_todo_sdl.cpp  ft8xxemu_keyboard_keys.h  ft8xxemu_keyboard_sdl.cpp  ft8xxemu_sleep_wake.cpp  ft8xxemu_sleep_wake.h  ft8xxemu_system.cpp  ft8xxemu_system.h  ft8xxemu_system_linux.cpp  ft8xxemu_system_linux.h  ft8xxemu_system_sdl.cpp  ft8xxemu_system_sdl.h  ft8xxemu_system_todo_linux.cpp  ft8xxemu_system_todo_linux.h  ft8xxemu_system_todo_sdl.cpp  ft8xxemu_system_todo_sdl.h  ft8xxemu_system_win32.cpp  ft8xxemu_system_win32.h  ft8xxemu_system_windows.cpp  ft8xxemu_system_windows.h  ft8xxemu_thread_ex.cpp  ft8xxemu_thread_ex.h  ft8xxemu_thread_state.cpp  ft8xxemu_thread_state.h  ft8xxemu_thread_state_linux.cpp  (+7 more)
ft8xxemu_static/: CMakeLists.txt
ft900emu/: CMakeLists.txt  ft900emu_chip.cpp  ft900emu_chip.h  ft900emu_ft32.cpp  ft900emu_ft32.h  ft900emu_ft32_def.h  ft900emu_intrin.h  ft900emu_inttypes.h  ft900emu_irq.cpp  ft900emu_irq.h  ft900emu_spim.cpp  ft900emu_spim.h  ft900emu_timer.cpp  ft900emu_timer.h  (+2 more)
(+2250 files in other folders)
