
FILE(GLOB SRCS ../ft800emu/*.cpp ../ft810emu/*.cpp *.cpp)
FILE(GLOB HDRS ../ft800emu/*.h ../ft810emu/*.h *.h ../bt815emu/resources/rom_bt815.h)

FILE(GLOB HRES ../reference/*.h resources/*.h)

SOURCE_GROUP("" FILES ${SRCS} ${HDRS})
SOURCE_GROUP("resources" FILES ${HRES})

ADD_LIBRARY(bt817emu
  ${SRCS}
  ${HDRS}
  ${HRES}
)

TARGET_LINK_LIBRARIES(bt817emu
  ft8xxemu_platform
  astc)

SET_TARGET_PROPERTIES(bt817emu PROPERTIES
  COMPILE_DEFINITIONS "FT800EMU=BT817EMU;FT810EMU=BT817EMU;BT815EMU=BT817EMU;FT810EMU_MODE;BT815EMU_MODE;BT817EMU_MODE")

IF (CMAKE_COMPILER_IS_GNUCXX AND !WIN32)
  SET_TARGET_PROPERTIES(bt817emu PROPERTIES COMPILE_FLAGS -fPIC)
ENDIF ()
