
FILE(GLOB SRCS ../ft800emu/*.cpp ../ft810emu/*.cpp *.cpp)
FILE(GLOB HDRS ../ft800emu/*.h ../ft810emu/*.h *.h)

FILE(GLOB HRES ../reference/*.h resources/*.h)

SOURCE_GROUP("" FILES ${SRCS} ${HDRS})
SOURCE_GROUP("resources" FILES ${HRES})

ADD_LIBRARY(bt880emu
  ${SRCS}
  ${HDRS}
  ${HRES}
)

TARGET_LINK_LIBRARIES(bt880emu
  ft8xxemu_platform)

SET_TARGET_PROPERTIES(bt880emu PROPERTIES
  COMPILE_DEFINITIONS "FT800EMU=BT880EMU;FT810EMU=BT880EMU;FT810EMU_MODE;BT880EMU_MODE")

IF (CMAKE_COMPILER_IS_GNUCXX AND !WIN32)
  SET_TARGET_PROPERTIES(bt880emu PROPERTIES COMPILE_FLAGS -fPIC)
ENDIF ()
