
FILE(GLOB SRCS *.cpp *.c)
FILE(GLOB HDRS *.h)
FILE(GLOB RSCS *.rc)

ADD_LIBRARY(bt8xxemu SHARED
  ${SRCS}
  ${HDRS}
  ${RSCS}
)

IF (WITH_FT800EMU)
  TARGET_LINK_LIBRARIES(bt8xxemu
    ft800emu
  )
ENDIF (WITH_FT800EMU)

IF (WITH_FT810EMU)
  TARGET_LINK_LIBRARIES(bt8xxemu
    ft810emu
  )
ENDIF (WITH_FT810EMU)

IF (WITH_BT815EMU)
  TARGET_LINK_LIBRARIES(bt8xxemu
    bt815emu
  )
ENDIF (WITH_BT815EMU)

IF (MINGW)
  SET_TARGET_PROPERTIES(bt8xxemu PROPERTIES
    PREFIX "")
ENDIF (MINGW)

SET_TARGET_PROPERTIES(bt8xxemu PROPERTIES
  COMPILE_DEFINITIONS "BT8XXEMU_EXPORT_DYNAMIC")
