
FILE(GLOB SRCS ../bt8xxemu/*.cpp)
FILE(GLOB HDRS ../bt8xxemu/*.h)

ADD_LIBRARY(bt8xxemu_static
  ${SRCS}
  ${HDRS}
)

IF (WITH_FT800EMU)
  TARGET_LINK_LIBRARIES(bt8xxemu_static
    ft800emu
  )
ENDIF (WITH_FT800EMU)

IF (WITH_FT810EMU)
  TARGET_LINK_LIBRARIES(bt8xxemu_static
    ft810emu
  )
ENDIF (WITH_FT810EMU)

IF (WITH_BT880EMU)
  TARGET_LINK_LIBRARIES(bt8xxemu_static
    bt880emu
  )
ENDIF (WITH_BT880EMU)

IF (WITH_BT815EMU)
  TARGET_LINK_LIBRARIES(bt8xxemu_static
    bt815emu
  )
ENDIF (WITH_BT815EMU)

IF (WITH_BT817EMU)
  TARGET_LINK_LIBRARIES(bt8xxemu_static
    bt817emu
  )
ENDIF (WITH_BT817EMU)

SET_TARGET_PROPERTIES(bt8xxemu_static PROPERTIES
  COMPILE_DEFINITIONS "BT8XXEMU_STATIC")
