
FILE(GLOB SRCS ../ft800editor/*.cpp)
FILE(GLOB HDRS ../ft800editor/*.h)
IF (WIN32)
	FILE(GLOB SRCSFT ../ft800editor/ftlib/*.cpp)
	FILE(GLOB HDRSFT ../ft800editor/ftlib/*.h)
	FILE(GLOB RSRC ../ft800editor/*.rc)
ENDIF (WIN32)
FILE(GLOB RESOURCES ../ft800editor/*.qrc)

# Find the QtWidgets library
FIND_PACKAGE(Qt5Widgets)

# Instruct CMake to run moc automatically when needed.
SET(CMAKE_AUTOMOC ON)

QT5_ADD_RESOURCES(RESOURCE_ADDED ${RESOURCES})

ADD_EXECUTABLE(ft810editor WIN32
	${SRCS}
	${HDRS}
	${SRCSFT}
	${HDRSFT}
	${RSRC}
	${RESOURCE_ADDED}
	)

TARGET_LINK_LIBRARIES(ft810editor
	ft810emu
	)

IF (WITH_SDL2)
  ADD_DEFINITIONS(-DFT800EMU_SDL2)
ELSEIF (WITH_SDL)

  # SDL base package
  FIND_PACKAGE(SDL)
  IF (NOT SDL_FOUND)
    MESSAGE(FATAL_ERROR "SDL not found!")
  ENDIF (NOT SDL_FOUND)
  INCLUDE_DIRECTORIES(
    ${SDL_INCLUDE_DIR}
    )
  TARGET_LINK_LIBRARIES(ft810editor
    ${SDL_LIBRARY}
    )

  ADD_DEFINITIONS(-DFT800EMU_SDL)

ENDIF ()

IF (WITH_PYTHON)

  FIND_PACKAGE(PythonLibs REQUIRED)
  INCLUDE_DIRECTORIES(
    ${PYTHON_INCLUDE_DIRS}
    )
  TARGET_LINK_LIBRARIES(ft810editor
    ${PYTHON_LIBRARIES}
    )

  ADD_DEFINITIONS(-DFT800EMU_PYTHON)

  CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/../ft800editor/export_gd2.py
    ${CMAKE_CURRENT_BINARY_DIR}/export_gd2.py COPYONLY)

  CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/../ft800editor/export_eve_arduino.py
    ${CMAKE_CURRENT_BINARY_DIR}/export_eve_arduino.py COPYONLY)

  CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/../ft800editor/export_ftdi_eve_hal.py
    ${CMAKE_CURRENT_BINARY_DIR}/export_ftdi_eve_hal.py COPYONLY)

  CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/../ft800editor/img_cvt.py
    ${CMAKE_CURRENT_BINARY_DIR}/img_cvt.py COPYONLY)

  CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/../ft800editor/png.py
    ${CMAKE_CURRENT_BINARY_DIR}/png.py COPYONLY)

  CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/../ft800editor/pngp2pa.py
    ${CMAKE_CURRENT_BINARY_DIR}/pngp2pa.py COPYONLY)

  CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/../ft800editor/raw_cvt.py
    ${CMAKE_CURRENT_BINARY_DIR}/raw_cvt.py COPYONLY)

ENDIF (WITH_PYTHON)

IF(WITH_FREETYPE)
  FIND_PACKAGE(Freetype REQUIRED)
  INCLUDE_DIRECTORIES(
    ${FREETYPE_INCLUDE_DIRS}
    )
  TARGET_LINK_LIBRARIES(ft810editor
    ${FREETYPE_LIBRARIES}
    )

  ADD_DEFINITIONS(-DFT800EMU_FREETYPE)
ENDIF(WITH_FREETYPE)

IF(FTEDITOR_TEMP_DIR)
  ADD_DEFINITIONS(-DFTEDITOR_TEMP_DIR)
ENDIF(FTEDITOR_TEMP_DIR)

IF (WIN32)
  TARGET_LINK_LIBRARIES(ft810editor
    Qt5::Widgets
    ${CMAKE_SOURCE_DIR}/ft800editor/ftlib/ftd2xx.lib
    ${CMAKE_SOURCE_DIR}/ft800editor/ftlib/libMPSSE.a
  )
ELSE (WIN32)
  TARGET_LINK_LIBRARIES(ft810editor
    Qt5::Widgets
  )
ENDIF (WIN32)

qt5_use_modules(ft810editor Widgets)

ADD_DEFINITIONS(-DFT800EMU_REFERENCE_DIR="${FT800_REFERENCE_DIR}")

SET_TARGET_PROPERTIES(ft810editor PROPERTIES
  COMPILE_DEFINITIONS "FT800EMU=FT810EMU;FT810EMU_MODE")

