
FILE(GLOB SRCS ../ft800emu/*.cpp)
FILE(GLOB HDRS ../ft800emu/*.h ../reference/*.h)

ADD_LIBRARY(ft810emu
  ${SRCS}
  ${HDRS}
)

TARGET_LINK_LIBRARIES(ft810emu
  ft8xxemu_platform)

SET_TARGET_PROPERTIES(ft810emu PROPERTIES
  COMPILE_DEFINITIONS "FT800EMU=FT810EMU;FT810EMU_MODE")

IF (FTEMU_PIC)
  SET_TARGET_PROPERTIES(ft810emu PROPERTIES COMPILE_FLAGS -fPIC)
ENDIF (FTEMU_PIC)
