
FILE(GLOB SRCS ../ft800emu/*.cpp *.cpp)
FILE(GLOB HDRS ../ft800emu/*.h ../reference/*.h *.h resources/*.h)

FILE(GLOB FTRES ../reference/*.h resources/*.h)

SOURCE_GROUP("" FILES ${SRCS} ${HDRS})
SOURCE_GROUP("resources" FILES ${FTRES})

ADD_LIBRARY(ft810emu
  ${SRCS}
  ${HDRS}
)

TARGET_LINK_LIBRARIES(ft810emu
  ft8xxemu_platform)

SET_TARGET_PROPERTIES(ft810emu PROPERTIES
  COMPILE_DEFINITIONS "FT800EMU=FT810EMU;FT810EMU_MODE")

IF (FTEMU_PIC)
  SET_TARGET_PROPERTIES(ft810emu PROPERTIES COMPILE_FLAGS -fPIC)
ENDIF (FTEMU_PIC)
