
FILE(GLOB SRCS *.cpp *.c)
FILE(GLOB HDRS *.h)
FILE(GLOB RSCS *.rc)

ADD_LIBRARY(ft8xxemu SHARED
  ${SRCS}
  ${HDRS}
  ${RSCS}
)

IF (WITH_FT800EMU)
  TARGET_LINK_LIBRARIES(ft8xxemu
    ft800emu
  )
ENDIF (WITH_FT800EMU)

IF (WITH_FT810EMU)
  TARGET_LINK_LIBRARIES(ft8xxemu
    ft810emu
  )
ENDIF (WITH_FT810EMU)

SET_TARGET_PROPERTIES(ft8xxemu PROPERTIES
  COMPILE_DEFINITIONS "BT8XXEMU_EXPORT_DYNAMIC")
